--- a/src/app/components/hirApp.html
+++ b/src/app/components/hirApp.html
@@ -5,10 +5,10 @@
         </div>
         <ul class="nav navbar-nav navbar-left">
             <li>
-                <a ng-link="['Organization']">Organization</a> 
+                <a ng-link="['Organization']">Organizations</a> 
             </li>
             <li>
-                <a ng-link="['App']">About</a>
+                <a ng-link="['Login']">Login</a>
             </li>
         </ul>
     </div>
