Added Register component

--- a/src/app/components/hirApp.html
+++ b/src/app/components/hirApp.html
@@ -5,10 +5,13 @@
         </div>
         <ul class="nav navbar-nav navbar-left">
             <li>
-                <a ng-link="['Organization']">Organizations</a> 
+                <a ng-link="['Organization']">Organizations</a>
             </li>
             <li>
                 <a ng-link="['Login']">Login</a>
+            </li>
+            <li>
+                <a ng-link="['Register']">Register</a>
             </li>
         </ul>
     </div>
