Modules re-organized

--- a/src/app/components/hirApp.html
+++ b/src/app/components/hirApp.html
@@ -5,7 +5,7 @@
         </div>
         <ul class="nav navbar-nav navbar-left">
             <li>
-                <a ng-link="['Organization']">Organizations</a>
+                <a ng-link="['Organizations']">Organizations</a>
             </li>
             <li>
                 <a ng-link="['Login']">Login</a>
