Added components for Residency

--- a/src/app/components/hirApp.html
+++ b/src/app/components/hirApp.html
@@ -8,6 +8,9 @@
                 <a ng-link="['Organizations']">Organizations</a>
             </li>
             <li>
+                <a ng-link="['Residencies']">Residencies</a>
+            </li>
+            <li>
                 <a ng-link="['Login']">Login</a>
             </li>
             <li>
