--- a/src/app/components/residecy/residenceList.html
+++ b/src/app/components/residecy/residenceList.html
@@ -1,3 +1,10 @@
 <div class="component">
-  <h2>{{$ctrl.text}}</h2>
+  <ul class="thumbnails">
+        <li ng-repeat="residence in model.recidencies" class="span5">
+            {{residence.title}} | {{residence.id}}
+            <button ng-click="model.goTo(residence.id)" class="btn btn-default">
+                    Ver
+                </button>
+        </li>
+    </ul>
 </div>
